# PocketRecorderTC

./: .gitignore  AudioCaptureMode.cs  Configuration.cs  ConfigurationMigrator.cs  Plugin.cs  PocketRecorder.csproj  PocketRecorder.json  PocketRecorder.sln  README.md  Recorder.csproj  Recorder.json  RecorderEnvironment.cs  RecordingBackendMode.cs  ShellHelpers.cs  VideoOutputScaleMode.cs
Capture/: AudioCaptureService.cs  D3D11InteropHelpers.cs  D3D11ReadbackTextureRing.cs  D3D11SharedTextureMailbox.cs  GameGraphicsDeviceProbe.cs  GameGraphicsDeviceProbeCache.cs  Nv12ComputeShader.cs  VideoCaptureFramePacer.cs  VideoCaptureService.NativeShared.cs  VideoCaptureService.Nv12.cs  VideoCaptureService.cs  VideoFrame.cs  WindowGraphicsCapture.cs
Diagnostics/: AmdRecordingDiagnosticLog.cs  RecordingDiagnosticLog.cs
Encoding/: BoundedMediaQueue.cs  FFmpegBootstrapper.cs  FFmpegEncoderSelector.cs  FFmpegWriter.cs  MediaFoundationWriter.cs  MfConstants.cs  NativeRecorderBackend.cs  NativeRecorderCfrFrameScheduler.cs  NativeRecorderDllResolver.cs  (+4 more)
NativeRecorder/: CMakeLists.txt  NativeRecorder.vcxproj  README.md
NativeRecorder/include/: pocket_recorder_native.h
NativeRecorder/src/: native_recorder.cpp  native_recorder_backend_amf.inl  native_recorder_backend_factory.inl  native_recorder_backend_nvenc.inl  native_recorder_backend_qsv.inl  native_recorder_backend_shared.inl  native_recorder_backends.inl  native_recorder_common.inl  native_recorder_converter.inl  native_recorder_diagnostics.inl  native_recorder_exports.cpp  native_recorder_exports.inl  native_recorder_muxer.inl
(+52 files in other folders)
